games: game list & user bets
