# src/routes/me/games/index.ts
@@ -1,15 +1,11 @@
 import { FastifyInstance, FastifyPluginOptions } from "fastify";
 import guess from "./guess";
-import info from "./info";
-import games from "./games";
 
 export default function (
     fastify: FastifyInstance,
     _opts: FastifyPluginOptions,
     done: (err?: Error) => void
 ) {
-    fastify.register(guess, { prefix: "/guess" });
-    fastify.register(info);
-    fastify.register(games);
+    fastify.register(guess);
     done();
 }
