# src/routes/me/index.ts
@@ -22,6 +22,7 @@ import starred from "./starred";
 import notifications from "./notifications";
 import following from "./following";
 import RequireAuth from "../../plugins/requireAuth";
+import games from "../games";
 
 export default function (
     fastify: FastifyInstance,
@@ -30,6 +31,7 @@ export default function (
 ) {
     fastify.addHook("preParsing", RequireAuth);
     fastify.register(votes, { prefix: "/votes" });
+    fastify.register(games, { prefix: "/games" });
     fastify.register(blocked);
     fastify.register(starred);
     fastify.register(following);
